Page MenuHome GnuPG

libgpg-error fails to cross-compile for armv7a-unknown-linux-gnueabihf [PATCH]
Closed, ResolvedPublic

Description

there is no suitable lock-obj-pub.armv7a-unknown-linux-gnueabihf.h file in src/syscfg/

generating the file with ./gen-posix-lock-obj:

diff --git a/src/syscfg/lock-obj-pub.armv7a-unknown-linux-gnueabihf.h b/src/syscfg/lock-obj-pub.armv7a-unknown-linux-gnueabihf.h
new file mode 100644
index 0000000..429c57c
--- /dev/null
+++ b/src/syscfg/lock-obj-pub.armv7a-unknown-linux-gnueabihf.h
@@ -0,0 +1,23 @@
+## lock-obj-pub.armv7a-unknown-linux-gnueabihf.h
+## File created by gen-posix-lock-obj - DO NOT EDIT
+## To be included by mkheader into gpg-error.h
+
+typedef struct
+{
+  long _vers;
+  union {
+    volatile char _priv[24];
+    long _x_align;
+    long *_xp_align;
+  } u;
+} gpgrt_lock_t;
+
+#define GPGRT_LOCK_INITIALIZER {1,{{0,0,0,0,0,0,0,0, \
+                                    0,0,0,0,0,0,0,0, \
+                                    0,0,0,0,0,0,0,0}}}
+##
+## Local Variables:
+## mode: c
+## buffer-read-only: t
+## End:
+##

//Edit: make it nice to read

Event Timeline

werner claimed this task.
werner added a subscriber: werner.

Thanks. Actually the same as arm7-unknown-linux-gnueabihf. I have added it to the alias table to be released with 1.36.