syscfg: Add armv7a-unknown-linux-gnueabihf as an alias.

--

GnuPG-bug-id: 4409
Signed-off-by: Werner Koch <wk@gnupg.org>